# bukoo

./: .gitignore  .gitlint  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
backend/: .coveragerc  .env.example  .importlinter  .ruff.toml  CLAUDE.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  schemas.py  seed.py  setup.py
backend/app/core/: config.py  constants.py  logger.py  query_params.py  util.py
backend/app/routers/: checkout.py  collections.py  products.py
backend/data/: collections.json
backend/migrations/: env.py
backend/migrations/versions/: 2026_04_20_2205-fb08a77012d5_create_users_and_accounts_tables.py  2026_04_29_0929-34d22fa2a4ee_create_all_tables.py  2026_04_30_1312-6db49f674c10_set_account_open_id_nullable_true.py  2026_05_03_2025-48481663a72f_create_verification_tokens_table.py  2026_05_06_0847-03ae0f7d298e_alter_users_date_of_birth_to_nullable.py  2026_05_10_1711-7f897e68c817_alter_author_add_deleted_at.py  2026_05_10_2258-411cc493b898_add_books_search_vector.py  2026_05_15_0944-e6aa3b906470_alter_publisher_add_deleted_at_column.py  2026_05_17_1049-65b0d23dc68e_alter_review_add_hidden_at_column.py  2026_05_18_0000-6cba05eb288f_alter_notifications_add_read_at_column.py  2026_05_20_1942-d99fb43f33ac_add_report_job_table.py
backend/scripts/: export_openapi.py
backend/tests/unit/: test_activate_book.py  test_activate_user.py  test_add_cart_item.py  (+85 more)
(+1602 files in other folders)
