[project]
name = "Bukoo"
version = "0.1.0"
description = "Bukoo backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.0.0,<4.0.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "aiosmtplib>=3.0.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "uuid-extension>=0.2.0",
    "structlog>=25.1.0,<=25.5.0",
    "celery[redis]>=5.3.0",
    "redis[hiredis]>=4.5.2",
    "reportlab>=4.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
    "types-reportlab>=4.5.0",
    "boto3-stubs[s3]>=1.34.0",
    "celery-types>=0.26.0",
    "sqlparse>=0.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "gitlint>=0.19.1",
]
